argocd/manifests/crypto-stop-loss-bot/overlay/contabo/add-deployment-env-vars.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-stop-loss-bot
spec:
  template:
    spec:
      containers:
        - name: crypto-stop-loss-bot
