argocd/manifests/crypto-stop-loss-bot/overlay/contabo/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crypto-stop-loss-bot
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`crypto-bot.vps.plagasagricolas.es`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: crypto-stop-loss-bot
      port: http
  tls:
    secretName: crypto-bot-vps-plagasagricolas-es-cert-secret
